# lap-counter

./: .gitignore  README.md  server.py
car_counter_reciever/: platformio.ini
car_counter_reciever/.pio/libdeps/esp01_1m/IRremoteESP8266/src/: IRrecv.cpp  IRrecv.h  ir_NEC.cpp  ir_NEC.h  ir_RCMM.cpp
car_counter_reciever/src/: car_counter_sender.code-workspace  main.cpp
car_counter_sender/: platformio.ini
car_counter_sender/.pio/libdeps/esp01_1m/IRremoteESP8266/src/: IRsend.cpp  ir_Bose.cpp  ir_NEC.h  ir_RCMM.cpp
car_counter_sender/src/: main.cpp
car_server/: Cargo.toml
car_server/frontend/carcounter/: package-lock.json  package.json  svelte.config.js
car_server/frontend/carcounter/src/routes/race/[id]/: +layout.svelte  +page.js  +page.svelte
car_server/src/: main.rs
car_server/src/db/: mod.rs  models.rs  schema.rs
docs/: design.excalidraw  design_top.excalidraw
