[package]
name = "carcounter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = "0.11"
axum = "0.6.18"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
chrono = {version = "0.4.28", features = ["serde"]}
serde = "1.0.164"
uuid = {version= "1.3.3", features = ["v4"]}

[dev-dependencies]
rstest = "0.18.1"
